# smbios-mdr

./: .upstream-base-commit  CMakeLists.txt  meson.build  meson.options
include/: baseboard.hpp  chassisCpu.hpp  cpu.hpp  dimm.hpp  firmware.hpp  mdrv2.hpp  meson.build  pcieslot.hpp  smbios_mdrv2.hpp  system.hpp  tpm.hpp
src/: chassisCpu.cpp  cpu.cpp  cpuinfo_main.cpp  dimm.cpp  firmware.cpp  mdrv2.cpp  meson.build  pcieslot.cpp  system.cpp  tpm.cpp
src/smbios-ipmi-blobs/: handler.cpp
