option(
  'tests',
   type: 'feature',
   value: 'disabled',
   description: 'Build tests'
)

option(
  'dimm-dbus',
  type: 'feature',
  value: 'enabled',
  description: 'Expose DIMM D-Bus Interface'
)

option(
  'dimm-only-locator',
  type: 'feature',
  value: 'disabled',
  description: 'Only use the DIMM number, and not the bank'
)

option(
  'cpuinfo',
  type: 'feature',
  value: 'enabled',
  description: 'Build CPUInfo service'
)

option(
  'smbios-ipmi-blob',
  type: 'feature',
  value: 'enabled',
  description: 'Build IPMI blob library for SMBIOS transfer'
)

option(
  'nvidia',
  type: 'boolean',
  value: 'false',
  description: 'Enable NVIDIA features'
)

option(
  'expose-inventory',
  type: 'boolean',
  value: 'false',
  description: 'Process Type 45 and report fw version'
)

option(
  'firmware-component-name-bmc',
  type: 'string',
  value: '',
  description: 'BMC firmware component name in Type 45, it is used to avoid duplicated version object'
)

option(
  'firmware-component-name-bios',
  type: 'string',
  value: '',
  description: 'BIOS firmware component name in Type 45, it is used to avoid duplicated version object'
)

option(
  'firmware-component-name-tpm',
  type: 'string',
  value: '',
  description: 'TPM firmware component name in Type 45, it is used to avoid duplicated version object'
)

option(
  'platform-prefix',
  type: 'string',
  value: '',
  description: 'Platform prefix, it prepend to DBus object name, such as ${PLATFORM_PREFIX}_CPU_0'
)
